@@ -22,7 +22,7 @@ STATUSTHEME #002030;#000000;#ffffff;#999999;#777755;#339933;#aa6644;#ffffff;#ddd
 WINDOWTHEME #443311;#002030;
 # Background colour for the focused window's name in the bar from STATUSTHEME
 WNAMEBG 7
-# left align the focused window's name in the bar
+# left align the focused window's name in the bar: 0=true
 LEFT_WINDOWNAME 0
 # max length for the window's name
 WINDOWNAMELENGTH 35
@@ -39,9 +39,10 @@ DEFAULTMODE 3;4;0;1;2;3;
 NMASTER 0;0;1;0;2;0;
 # open new windows in the stack? 0=yes,1=no
 ATTACHASIDE 1
-# if new window is in the stack add it at the top
+# if new window is in the stack add it at the top? 0=yes,1=no
 TOPSTACK 1
-# if in stacking mode center window # (1) is best for gimp
+# if in stacking mode center window # 0=yes,1=no
+# (1) is best for gimp
 CENTER_STACK 0
 # Key to use when moving/resizing windows in stacking mode.
 # Default is Alt; other choice is Super, so only uncomment if
@@ -65,12 +66,16 @@ BAR_ALPHA 75
 # only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
 FOLLOWMOUSE 1
 CLICKTOFOCUS 0
+# Have the bar on top? 0=yes,1=no
 TOPBAR 0
+# Show the bar at startup? 0=yes,1=no
 SHOW_BAR 0
-# Show the number of opened windows in the desktop switcher?
+# Show the number of opened windows in the desktop switcher? 0=yes,1=no
 SHOWNUMOPEN 1
 # How to display the current tiling mode in the bar
 MODENAME [V];[F];[H];[G];[C];
+# Name the desktops
 DESKTOP_NAMES one;two;three;four;five;six;
+# Font to use in the bar
 FONTNAME "-*-clean-*-*-*-*-14-*-*-*-*-*-*-*"
 # 
