@@ -1,3 +1,6 @@
+22/2/14
+  Don't manage dock apps with '_NET_WM_WINDOW_TYPE_DOCK' set
+
 20/2/14
   Add option BAR_SHORT to rc.conf to shorten the bar's 
   length to have room for an external app
